# AI-Evaluation-Pipeline

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: SDS.md  SRS.md
examples/: baseline.yaml  candidate.yaml  http_provider.yaml  qa_dataset.jsonl
src/evalpipe/: __init__.py  ab.py  cache.py  cli.py  config.py  datasets.py  demo.py  exceptions.py  pipeline.py  runner.py  slices.py  stats.py  storage.py
src/evalpipe/evaluators/: __init__.py  base.py  llm_judge.py  safety.py  semantic.py  string_metrics.py
src/evalpipe/providers/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  openai_compat.py
src/evalpipe/server/: __init__.py  app.py  schemas.py
src/evalpipe/server/static/: charts.js  playground.js  styles.css  ui.js
src/evalpipe/server/templates/: _comparison.html  _macros.html  base.html  compare.html  dashboard.html  playground.html  run_detail.html
tests/: __init__.py  conftest.py  test_ab.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_datasets.py  test_evaluators.py  test_llm_judge.py  test_providers.py  test_runner.py  test_slices.py  test_stats.py  test_storage.py
