[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "evalpipe"
version = "1.0.0"
description = "Provider-agnostic evaluation pipeline for LLM applications: datasets, metrics, statistical A/B testing, and a reporting dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Perinba Athiban", email = "perinbaathiban@gmail.com" }]
keywords = ["llm", "evaluation", "benchmark", "ab-testing", "metrics", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
evalpipe = "evalpipe.cli:app"

[project.urls]
Repository = "https://github.com/PerinbaBuilds/AI-Evaluation-Pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/evalpipe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Typer uses function calls in argument defaults by design

[tool.ruff.lint.per-file-ignores]
"src/evalpipe/demo.py" = ["E501"]  # demo dataset literals read better on one line each

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["evalpipe"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers"
filterwarnings = ["error::DeprecationWarning:evalpipe.*"]

[tool.coverage.run]
source = ["src/evalpipe"]
omit = ["src/evalpipe/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
